<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/toodledo_logo" />
            <!-- Logo Ends -->

        </LinearLayout>
        <!-- Header Ends -->

        <LinearLayout  android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/app_id_lbl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_id"
                android:textColor="#372c24" />

            <TextView
                android:id="@+id/app_id"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="5dip"
                android:layout_weight="1"
                android:singleLine="true" />
        

            <TextView
                android:id="@+id/secret_lbl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/secret"
                android:textColor="#372c24" />

            <TextView
                android:id="@+id/secret"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="5dip"
                android:singleLine="true" />
         

            <TextView
                android:id="@+id/auth_lbl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/authorization"
                android:textColor="#372c24" />

            <TextView
                android:id="@+id/authorization"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
                android:layout_marginTop="5dip"
                android:singleLine="true" />
        

            <TextView
                android:id="@+id/access_lbl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/access_token"
                android:textColor="#372c24" />

            <TextView
                android:id="@+id/access"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="5dip"
                android:singleLine="true" />
        

            <TextView
                android:id="@+id/refresh_lbl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/refresh_token"
                android:textColor="#372c24" />

            <TextView
                android:id="@+id/refresh_token"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="10dip"
                android:singleLine="true" />
        

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/refresh_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/refresh" />

                <Button
                    android:id="@+id/get_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/api_call" />
            </LinearLayout>
        <LinearLayout
             android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
              android:visibility="gone"
            android:orientation="vertical"
            android:padding="10dip" >
            <TextView
                android:id="@+id/user_email_lbl"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="30dip"
                android:text="@string/user_email"
                android:textColor="#372c24"
              />

            <TextView
                android:id="@+id/user_email_2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:singleLine="true"
              />
              </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>