<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/toodledo_logo" />
            <!-- Logo Ends -->

        </LinearLayout>
        <!-- Header Ends -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:id="@+id/app_id_lbl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_id"
                android:textColor="#372c24" />

            <TextView
                android:id="@+id/app_secret_lbl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/secret"
                android:textColor="#372c24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <EditText
                android:id="@+id/app_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="text"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/app_secret"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="text"
                android:textColor="#372c24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/authorize"
                style="@style/ButtonText"
                android:background="@drawable/btn_blue"
                android:text="@string/authorize" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:id="@+id/auth_lbl"
                android:layout_width="0dip "
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/authorization"
                android:textColor="#372c24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dip" >

            <EditText
                android:id="@+id/auth_code"
                android:layout_width="0dip "
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="text"
                android:textColor="#372c24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/get_access_code"
                style="@style/ButtonText"
                android:background="@drawable/btn_blue"
                android:text="@string/get_access_code"   >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:id="@+id/access_lbl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/access_token"
                android:textColor="#372c24" />

            <TextView
                android:id="@+id/refresh_lbl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/refresh_token"
                android:textColor="#372c24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <EditText
                android:id="@+id/access"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="text"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/refresh"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="text"
                android:textColor="#372c24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/get_user_email"
                style="@style/ButtonText"
                android:layout_weight="1"
                android:background="@drawable/btn_blue"
                android:text="@string/get_user_email" >
            </Button>

            <Button
                android:id="@+id/refresh_btn"
                style="@style/ButtonText"
                android:layout_weight="1"
                android:background="@drawable/btn_blue"
                android:text="@string/refresh" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:id="@+id/user_email_lbl"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_email"
                android:textColor="#372c24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <EditText
                android:id="@+id/user_info"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="text"
                android:textColor="#372c24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/clr_unit"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dip" >

            <Button
                android:id="@+id/clr_cred"
                style="@style/ButtonText"
                android:background="@drawable/btn_blue"
                android:text="@string/clear_credentials" >
            </Button>
         
        </LinearLayout>
    </LinearLayout>

</ScrollView>